--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     def mockito_kotlin = "3.2.0"
     def arch_core_version = "2.1.0"
     def coroutines_test_version = "1.5.0"
+    def androidx_test = "1.4.0"
+    def androidx_junit = "1.1.3"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
@@ -81,4 +83,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     // Cicerone
     implementation "com.github.terrakok:cicerone:$cicerone_version"
+    // UI Testing
+    androidTestImplementation "androidx.test:core:$androidx_test"
+    androidTestImplementation "androidx.test:core-ktx:$androidx_test"
+    androidTestImplementation "androidx.test.ext:junit-ktx:$androidx_junit"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
 }
